<resources>
    <string name="app_name">Traductor ML - Kotlin</string>
    <string name="Tv_bienvenida">Bienvenidos</string>

    <string name="Et_Idioma_Origen">Ingrese texto</string>
    <string name="Tv_Idioma_Destino">Traducción</string>
    <string name="Btn_Elegir_Idioma">Español</string>
    <string name="Btn_Idioma_Elegido">Ingles</string>
    <string name="Btn_Traducir">Traducir</string>

    <string name="Menu_Limpiar_texto">Limpiar</string>
    <string name="Menu_Informacion">Informacion</string>

    <string name="Txt_mensaje">Se requiere de una conexión wifi para descargar los paquetes de idiomas</string>
    <string name="Btn_entendido">Entendido</string>
</resources>